--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>server</module>
+        <module>modules</module>
         <!--<module>distribution</module>-->
     </modules>
 
@@ -438,19 +439,25 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.mg.server</groupId>
+                <groupId>com.mg.modules</groupId>
                 <artifactId>framework</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
             </dependency>
             <dependency>
-                <groupId>com.mg.server</groupId>
+                <groupId>com.mg.modules</groupId>
+                <artifactId>datamodel</artifactId>
+                <version>${project.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>com.mg.modules</groupId>
                 <artifactId>core</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
             </dependency>
             <dependency>
-                <groupId>com.mg.server</groupId>
+                <groupId>com.mg.modules</groupId>
                 <artifactId>baiengine</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
@@ -850,6 +857,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>javaee</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <profile>
