--- a/server/datawarehouse/pom.xml
+++ b/server/datawarehouse/pom.xml
@@ -18,17 +18,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.mg.server</groupId>
+            <groupId>com.mg.modules</groupId>
             <artifactId>framework</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mg.server</groupId>
+            <groupId>com.mg.modules</groupId>
             <artifactId>core</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mg.server</groupId>
+            <groupId>com.mg.modules</groupId>
             <artifactId>baiengine</artifactId>
             <scope>provided</scope>
         </dependency>
