--- a/server/paymentcontrol/pom.xml
+++ b/server/paymentcontrol/pom.xml
@@ -18,12 +18,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.mg.server</groupId>
+            <groupId>com.mg.modules</groupId>
             <artifactId>framework</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mg.server</groupId>
+            <groupId>com.mg.modules</groupId>
             <artifactId>core</artifactId>
             <scope>provided</scope>
         </dependency>
