--- a/pom.xml
+++ b/pom.xml
@@ -483,6 +483,18 @@
         <type>jar</type>
       </dependency>
       <dependency>
+        <groupId>com.mg.bai.discount</groupId>
+        <artifactId>ejb</artifactId>
+        <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.mg.bai.discount</groupId>
+        <artifactId>ui</artifactId>
+        <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+      <dependency>
         <groupId>com.mg.server</groupId>
         <artifactId>scheduler</artifactId>
         <version>${project.version}</version>
