--- a/bai/pom.xml
+++ b/bai/pom.xml
@@ -20,6 +20,7 @@
     <module>account</module>
     <module>discount</module>
     <module>warehouse</module>
+    <module>retail</module>
   </modules>
 
   <dependencies>
