--- a/bai/retail/ui/pom.xml
+++ b/bai/retail/ui/pom.xml
@@ -20,18 +20,22 @@
     <dependency>
       <groupId>com.mg.bai.retail</groupId>
       <artifactId>ejb</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.core</groupId>
       <artifactId>ui</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.mg.server.reference</groupId>
       <artifactId>ui</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.mg.server.document</groupId>
       <artifactId>ui</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
