--- a/bai/payalloc/pom.xml
+++ b/bai/payalloc/pom.xml
@@ -6,30 +6,30 @@
 
   <parent>
     <groupId>com.mg</groupId>
-    <artifactId>server</artifactId>
+    <artifactId>bai</artifactId>
     <version>4.0.8-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.mg.server</groupId>
-  <artifactId>paymentalloc</artifactId>
+  <groupId>com.mg.bai</groupId>
+  <artifactId>payalloc</artifactId>
 
-  <name>MBSA::Server::PaymentAlloc</name>
+  <name>MBSA::BAI::PaymentAllocation</name>
   <description/>
 
   <dependencies>
     <dependency>
-      <groupId>com.mg.modules</groupId>
-      <artifactId>framework</artifactId>
+      <groupId>com.mg.modules.core</groupId>
+      <artifactId>ui</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.mg.modules</groupId>
-      <artifactId>core</artifactId>
+      <groupId>com.mg.server.reference</groupId>
+      <artifactId>ejb</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.mg.server</groupId>
-      <artifactId>reference</artifactId>
+      <groupId>com.mg.server.reference</groupId>
+      <artifactId>ui</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -43,22 +43,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.mg.server</groupId>
-      <artifactId>document</artifactId>
+      <groupId>com.mg.server.document</groupId>
+      <artifactId>ejb</artifactId>
       <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-system</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-jmx</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-annotations-ejb3</artifactId>
     </dependency>
 
     <dependency>
