--- a/bai/pom.xml
+++ b/bai/pom.xml
@@ -24,6 +24,7 @@
     <module>warehouse</module>
     <module>mfref</module>
     <module>manufacture</module>
+    <module>payalloc</module>
     <module>retail</module>
   </modules>
 
