revert previous structure of table due rafactoring need

--- a/bai/pom.xml
+++ b/bai/pom.xml
@@ -33,6 +33,7 @@
     <module>overall</module>
     <module>finance</module>
     <module>planning</module>
+    <module>table</module>
   </modules>
 
   <dependencies>
