workbench, security, scheduler services

--- a/bai/pom.xml
+++ b/bai/pom.xml
@@ -40,6 +40,7 @@
     <module>crm</module>
     <module>rptvwr</module>
     <module>help</module>
+    <module>workbench</module>
   </modules>
 
   <dependencies>
