--- a/server/security/pom.xml
+++ b/server/security/pom.xml
@@ -12,9 +12,15 @@
 
   <groupId>com.mg.server</groupId>
   <artifactId>security</artifactId>
+  <packaging>pom</packaging>
 
   <name>MBSA::Server::Security</name>
   <description/>
+
+  <modules>
+    <module>security</module>
+    <module>service</module>
+  </modules>
 
   <dependencies>
     <dependency>
